<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/list_item_background_transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:layout_toLeftOf="@id/compteur_date"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/compteur_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/hint_compteur_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/compteur_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="\u2022 10"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/compteur_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/hint_player_name"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/compteur_date"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/compteur_last_modified"
            android:textStyle="bold|italic" />
    </RelativeLayout>

</RelativeLayout>